<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:itemBackground="@android:color/transparent"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.samapps.restituo.ui.view.uinav.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.samapps.restituo.ui.view.uinav.wallet.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/nav_agreement"
        android:name="com.samapps.restituo.ui.view.uinav.useragreement.AgreementFragment"
        android:label="@string/menu_agreement"
        tools:layout="@layout/fragment_agreement" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.samapps.restituo.ui.view.uinav.invite.InviteFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_invite" />
</navigation>